--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -10,7 +10,7 @@ urls_limit = 10
 open_keep_all = False
 open_sort = True
 sort_timeout = 10
-open_ffmpeg = False
+open_ffmpeg = True
 open_filter_resolution = True
 min_resolution = 1280x720
 response_time_weight = 0.5
