--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -31,17 +31,17 @@ multicast_region_list = 全部
 multicast_page_num = 1
 open_proxy = False
 open_driver = True
-open_hotel = False
-open_hotel_foodie = False
-open_hotel_fofa = False
+open_hotel = True
+open_hotel_foodie = True
+open_hotel_fofa = True
 hotel_region_list = 全部
 hotel_page_num = 1
 open_update_time = False
 request_timeout = 5
 origin_type_prefer = hotel,multicast,subscribe,online_search
-hotel_num = 0
-multicast_num = 20
-subscribe_num = 30
+hotel_num = 5
+multicast_num = 5
+subscribe_num = 40
 online_search_num = 0
 open_url_info = True
 open_empty_category = False
